<resources>
    <string name="app_name">Cerberus</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="dr">"door"</string>
    <string name="wnd">"window"</string>
    <string name="db">"doorbell"</string>

    <string name="lset">"light settings"</string>
    <string name="vset">"vibr. settings"</string>
    <string name="aset">"app settings"</string>
    <string name="nset">"notif. settings"</string>
    <string name="sett">"settings"</string>

    <string name="T">"Time"</string>
    <string name="D">"Date"</string>
    <string name="M">"Mode"</string>
    <string name="W">"Which"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sing">Searching</string>
    <string name="tDate">today</string>
    <string name="title_activity_homepage">HomepageActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Settings Page</string>
    <string name="settings_page_label">Settings Page</string>
    <string name="settings_label">Settings</string>
    <string name="history_label">History</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="app_settings_label">App Settings</string>
    <string name="light_settings_label">Light Settings</string>
    <string name="noti_settings_label">Notification Settings</string>
    <string name="vibrate_settings_label">Vibrate Settings</string>
    <string name="wristband_settings_label">Wristband Settings</string>
    <string name="credits_label">Credits</string>
    <string name="logout_label">Logout</string>

    <string name="vibe_intervals">Enter Vibration Intervals (ms)</string>
    <string name="current_intervals">Current Vibration Intervals: </string>
    <string name="vibe_cycle">Enter Vibration Cycles</string>
    <string name="current_cycle">Current Vibration Cycles: </string>
    <string name="noti_mute">Mute Notifications</string>
    <string name="apply_settings">Apply Settings</string>
    <string name="save_settings">Save Settings</string>

    <string name="team">Team Vibetracked</string>
    <string name="welcomeCerb">Welcome to Cerberus!</string>
    <string name="description">A Vibrating Bluetooth Wristband</string>
    <string name="createdBy">Created by Team Vibetracked</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
