<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".home.SecondFragment">

        <LinearLayout
            android:id="@+id/headerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:text="@string/settings_page_label"
            android:textSize="30sp"
            tools:ignore="ExtraText">

            <include
                layout="@layout/main_toolbar" />

            // app
            <TextView
                android:id="@+id/textView"
                android:layout_width="413dp"
                android:layout_height="40dp"
                android:gravity="center_horizontal"
                android:text="@string/app_settings_label"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:text="APP SETTINGS AND STUFF"
                android:textSize="20sp" />

            // notifications
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_horizontal"
                android:text="@string/noti_settings_label"
                android:textSize="30sp" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/noti_mute"
                android:textSize="20sp" />

            // vibrations
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_horizontal"
                android:text="@string/vibrate_settings_label"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/vibe_intervals"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="38dp" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="Save Settings"
                android:textColor="@color/CompanyColor" />

        </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include
            layout="@layout/main_nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
