<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:background="@color/CompanyColor"
        android:onClick="clickLogo"
        android:scaleType="fitCenter"
        android:src="@drawable/cerberus_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#636363"
        android:background="@color/CompanyColor"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="#636363" />

    // history
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="clickHistory">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/history_label"
            android:padding="12dp"
            android:layout_marginStart="16dp"/>

    </LinearLayout>

    // settings
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="clickSettings">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_label"
            android:padding="12dp"
            android:layout_marginStart="16dp"/>

    </LinearLayout>

    // credits
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="clickCredits">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/credits_label"
            android:padding="12dp"
            android:layout_marginStart="16dp"/>

    </LinearLayout>

    // logout
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:onClick="clickLogout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout_label"
            android:padding="12dp"
            android:layout_marginStart="16dp"/>

    </LinearLayout>

</LinearLayout>
