<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HistoryFragment"
    tools:ignore="ExtraText">

    // HISTORY FRAGMENT
    <fragment
        android:id="@+id/HistoryFragment"
        android:name="vib.track.cerberus.history.HistoryList"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_history_list">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    // SECOND FRAGMENT
    <fragment
        android:id="@+id/SecondFragment"
        android:name="vib.track.cerberus.home.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        // second fragment to app settings button
        <action
            android:id="@+id/action_SecondFragment_to_app_settings2"
            app:destination="@id/app_settings" />
        <action
            android:id="@+id/action_SecondFragment_to_notification_settings"
            app:destination="@id/notification_settings" />
        <action
            android:id="@+id/action_SecondFragment_to_wristband_settings"
            app:destination="@id/wristband_settings" />
    </fragment>

    // APP SETTINGS PAGE
   <fragment
        android:id="@+id/app_settings"
        android:name="vib.track.cerberus.settings_activities.app_settings"
        android:label="@string/app_settings_label"
        tools:layout="@layout/fragment_app_settings">

       <action
           android:id="@+id/action_app_settings_to_SecondFragment"
           app:destination="@id/SecondFragment" />
   </fragment>
    <fragment
        android:id="@+id/notification_settings"
        android:name="vib.track.cerberus.settings_activities.notification_settings"
        android:label="fragment_notification_settings"
        tools:layout="@layout/fragment_notification_settings" >
        <action
            android:id="@+id/action_notification_settings_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/light_settings"
        android:name="vib.track.cerberus.settings_activities.light_settings"
        android:label="fragment_light_settings"
        tools:layout="@layout/fragment_light_settings" >
        <action
            android:id="@+id/action_light_settings_to_wristband_settings"
            app:destination="@id/wristband_settings" />
    </fragment>
    <fragment
        android:id="@+id/vibrate_settings"
        android:name="vib.track.cerberus.settings_activities.vibrate_settings"
        android:label="fragment_vibrate_settings"
        tools:layout="@layout/fragment_vibrate_settings" >
        <action
            android:id="@+id/action_vibrate_settings_to_wristband_settings"
            app:destination="@id/wristband_settings" />
    </fragment>
    <fragment
        android:id="@+id/wristband_settings"
        android:name="vib.track.cerberus.settings_activities.wristband_settings"
        android:label="wristband_settings" >
        <action
            android:id="@+id/action_wristband_settings_to_light_settings"
            app:destination="@id/light_settings" />
        <action
            android:id="@+id/action_wristband_settings_to_vibrate_settings"
            app:destination="@id/vibrate_settings" />
        <action
            android:id="@+id/action_wristband_settings_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    // LIGHT SETTINGS PAGE

</navigation>