<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".history.ScenarioDetail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:clipToPadding="false"
        android:paddingBottom="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <TextView
                android:id="@+id/titleTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/T"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/displayTime"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_background"
                android:gravity="center_vertical"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTime" />

            <TextView
                android:id="@+id/titleDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/D"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/displayTime" />

            <TextView
                android:id="@+id/displayDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_background"
                android:gravity="center_vertical"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleDate" />

            <TextView
                android:id="@+id/titleMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/M"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/displayDate" />

            <TextView
                android:id="@+id/displayMode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_background"
                android:gravity="center_vertical"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleMode" />

            <TextView
                android:id="@+id/titleWhich"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/W"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/displayMode" />

            <TextView
                android:id="@+id/displayWhich"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_background"
                android:gravity="center_vertical"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleWhich" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>


